# foresight-cdss-next

./: .env.local.example  .gitignore  .turborc  AWS_MIGRATION_GUIDE.md  HIPAA_WEBHOOK_COMPLIANCE.md  MIGRATION_EXAMPLES.md  README.md  SECURITY.md  WEBHOOK-SYSTEM.md  WEBHOOK_SYSTEM_IMPLEMENTATION.md  aws-exports.ts  docker-compose.localstack.yml  eslint.config.mjs  jest.config.localstack.ts  jest.config.ts  nx.json  package-lock.json  package.json  prettier.config.ts  pyproject.toml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy-edge-functions.yml  deploy-infra.yml  mirror.yml  security-attestation.yml  test-web-specs.yml
apps/foresight-cdss-next/: .env.example  .mcp.json  SUBDOMAIN_TESTING.md  TEAM_ONBOARDING.md  components.json  jest.config.ts  local-dev-setup.md  next.config.ts  package.json  prettier.config.ts  tsconfig.json
apps/foresight-cdss-next-e2e/: package.json
docs/: Backend.md  Frontend.md  Implementation.md
infra/: .gitignore  .graphqlconfig.yml  INFRASTRUCTURE-SECURITY.md  README.md  cdk.context.json  cdk.context.localstack.json  cdk.json  localstack.config.ts  package.json  schema.json  tsconfig.json
libs/shared-ocr/: README.md  example.py  project.json  pyproject.toml
libs/shared-ocr/libs/shared_ocr/: __init__.py  cli.py  ocr_service.py
libs/shared-ocr/tests/: test_insurance_card_data.py  test_ocr_service.py
scripts/: generate-sbom.sh  generate-types.sh  localstack-debug.sh  localstack-deploy.sh  sign-deployment.sh
supabase/: .gitignore  config.toml  schema.sql  seed.sql
tests/: README.md
(+645 files in other folders)
